# Kraken

./: Cargo.toml  LICENSE  README.md  bicubic.frag  raytracer.comp  sine.frag  vert.vert
.github/workflows/: rust.yaml
assets/shaders/: raytracer.comp  tier2.comp
backends/contract/: Cargo.toml
backends/vulkan/: Cargo.toml
backends/vulkan/src/: ffi.rs  lib.rs
backends/vulkan/src/alloc/: allocator.rs  mod.rs  slab.rs
backends/vulkan/src/command/: mod.rs  pool.rs
backends/vulkan/src/command/buffer/: barrier.rs  convert.rs  copy.rs  mod.rs  state.rs
backends/vulkan/src/command/buffer/descriptor/: mod.rs  resolve.rs  write.rs
backends/vulkan/src/command/descriptor/: allocator.rs  cache.rs  mod.rs  pool.rs  set.rs
backends/vulkan/src/core/: adapter.rs  convert.rs  device.rs  device_gateway.rs  error.rs  instance.rs  mod.rs  queue.rs
backends/vulkan/src/pipeline/: compute.rs  layout.rs  mod.rs  reflection.rs
backends/vulkan/src/presenting/: mod.rs  surface.rs  swapchain.rs
backends/vulkan/src/resources/: buffer.rs  image.rs  image_view.rs  mod.rs  sampler.rs  shader.rs
backends/vulkan/src/sync/: fence.rs  mod.rs  semaphore.rs
crates/gtw/: Cargo.toml
crates/kmath/: Cargo.toml
crates/kraken/: Cargo.toml
crates/kraken/src/: accum_buffer.rs  app.rs  editor.rs  egui.rs  main.rs  profile_buffer.rs  scene.rs  ui.rs
crates/kraken/src/viewport/: camera.rs  mod.rs
crates/krender/: Cargo.toml
docs/: README.md
docs/concepts/: geometry-model.md  planes-and-domains.md  (+2 more)
src/: camera.rs  config_buffer.rs  gl_util.rs  main.rs  scene.rs  structure.rs
(+76 files in other folders)
