[package]
name = "kraken"
version = "0.1.0"
edition = "2024"

[dependencies]
kmath = { path = "../kmath" }
krender = { path = "../krender" }
egui = "0.35.0"
egui-winit = "0.35.0"
egui_glow = "0.35.0"
glow = { workspace = true }
glutin = "0.32.3"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.2"
tracy-client = { workspace = true }
winit = "0.30.13"
gl = { workspace = true }
